# sqlite-lite

./: .gitignore  CMakeLists.txt  README.md
include/cli/: event_loop.hpp
include/lib/: exception.hpp
src/cli/: event_loop.cpp  main.cpp
test/: CMakeLists.txt
